# openvoronoi

./: .gitignore  CMakeLists.txt  install.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cd.yml
cmake/: Findqd.cmake  OpenVoronoiConfig.cmake.in
cpp_examples/cpptest_arc/: CMakeLists.txt  arc.cpp
cpp_examples/medial_axis/: CMakeLists.txt  main.cpp
cpp_examples/minimal/: CMakeLists.txt  main.cpp
python_examples/: chain_1_incircle.py
src/: CMakeLists.txt
src/deb/: package_details.cmake
src/pythonlib/openvoronoi/: ovdvtk.py
src/test/cpptest_medial_axis/: CMakeLists.txt
src/test/cpptest_medial_axis_pocket/: CMakeLists.txt
src/test/cpptest_minimal/: CMakeLists.txt
src/test/cpptest_offset/: CMakeLists.txt
src/test/cpptest_para_lines/: CMakeLists.txt
src/test/cpptest_polygon/: CMakeLists.txt
src/test/cpptest_random_linesegs/: CMakeLists.txt
src/test/cpptest_random_points/: CMakeLists.txt
src/test/cpptest_square/: CMakeLists.txt
