[metadata]
name = openvoronoi
description = 2D voronoi diagram for point and line-segment sites using incremental topology-oriented algorithm. C++ with python bindings.
author = Anders Wallin
author_email = anders.e.e.wallin@gmail.com
long_description_file = file: README.rst
url = https://github.com/aewallin/openvoronoi
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Manufacturing
project_urls =
    homepage = https://github.com/aewallin/openvoronoi
    documentation = https://github.com/aewallin/openvoronoi
    repository = https://github.com/aewallin/openvoronoi

[options]
package_dir=
    openvoronoi=src/pythonlib/openvoronoi
packages = openvoronoi
python_requires = >=3.7
include_package_data = True
zip_safe = False
